= Changelog `vzd-cli`

== Version 2.1.0
- Neu: ApoVZD Unterstützung über `vzd-cli apo`
- `vzd-cli admin login` wurde komplett überarbeitet
- `vzd-cli admin token` ersetzt `vzd-cli admin auth`
- Neuer Befehl: `vzd-cli admin search`: schnelle, intuitive Suche nach Einträgen
- Neuer Befehl: `vzd-cli admin edit-base`: editieren eines Basiseintrags in einem Text-Editor
- Neuer Ausgabeformat: `--table`, eine ASCII Tabelle

== Version 2.0.0
- Kompatibilitätsmodus zur VZDClient 1.6. Befehl `vzd-cli admin cmd`
- Neue Befehle unter `vzd-cli pers`: verarbeitet die Basisdaten und Zertifikate aus den Peronalisierung-XML(TSP-Schnittstelle exports)
und schreibt diese in `vzd-cli` kompatiblen Format
- Neuer Befehl `vzd-cli admin delete-cert`: Löschen der Zertifikate
- Unterstützung für Admin API 1.8.1 https://github.com/gematik/api-vzd/blob/I_Directory_Administration/1.8.1/src/openapi/DirectoryAdministration.yaml
- Unterstützung von Paging in `vzd-cli admin dump create` über `-c / --cursor-size` und `-e / --expected-count`
- Anpassung der Konfiguration über `vzd-cli admin config set`
- Kleine Bugfixes


== Version 0.16.x
- Neue Befehle unter `vzd-cli ldif`: Management der LDIF-Exporten
- Dump Optimierungen
- Neue Spalten im CSV-Output
  - FAD - KIM Anbieter Kennung
  - specialization
- `vzd-cli admin cert-info` zeigt jetzt Title-Attribut (falls vorhanden)

== Version 0.15.x

- Unterstüzung von VZD 3.1.0-14
- `dump` Befehl wurde überarbeitet
  - `vzd-cli admin dump create` erzeugt einen neuen dump
  - `vzd-cli admin dump ocsp` ergänzt für jeden Zertifikat aus dem Dump die OCSP Informationen
  - Falls ein Dump bereits die OCSP-Daten enthält, werden nur die fehlerhafte Zertifikate erneut geprpüft (status != GOOD)
- neuer Befehl: `admin login-cred`: erlaubt Anmelden mit Client-Credentials, angegeben über Kommandozeile oder Umgebungsvariablen
- Befehle unterstützen zusätzlich zu `-p` die explizite Optionen:
```
      --name TEXT
      --uid TEXT
      --givenName TEXT
      --sn TEXT