@@ -2,9 +2,13 @@ package de.gematik.ti.directory.cli.admin
 
 import com.github.ajalt.clikt.core.CliktCommand
 import com.github.ajalt.clikt.core.CliktError
+import com.github.ajalt.clikt.core.UsageError
 import com.github.ajalt.clikt.core.requireObject
 import com.github.ajalt.clikt.output.TermUi
 import com.github.ajalt.clikt.parameters.arguments.argument
+import com.github.ajalt.clikt.parameters.options.default
+import com.github.ajalt.clikt.parameters.options.option
+import com.github.ajalt.clikt.parameters.options.switch
 import de.gematik.ti.directory.admin.BaseDirectoryEntry
 import de.gematik.ti.directory.admin.UpdateBaseDirectoryEntry
 import de.gematik.ti.directory.cli.catching
@@ -15,10 +19,16 @@ import kotlinx.serialization.json.Json
 import mu.KotlinLogging
 import net.mamoe.yamlkt.Yaml
 
+private val JsonPretty = Json { prettyPrint = true }
+
 class EditBaseCommand : CliktCommand(name = "edit-base", help = "Edit base entry using text editor") {
     private val logger = KotlinLogging.logger {}
     private val telematikID by argument()
     private val context by requireObject<CommandContext>()
+    private val format by option().switch(
+        "--json" to OutputFormat.JSON,
+        "--yaml" to OutputFormat.YAML
+    ).default(OutputFormat.YAML)
 
     private val json = Json { ignoreUnknownKeys = true }
 
@@ -26,8 +36,20 @@ class EditBaseCommand : CliktCommand(name = "edit-base", help = "Edit base entry
         val queryResult = runBlocking { context.client.readDirectoryEntry(mapOf("telematikID" to telematikID)) }
         val entry = queryResult?.firstOrNull() ?: throw CliktError("Entry not found for TelematikID: $telematikID")
 
-        TermUi.editText(Yaml.encodeToString(entry.directoryEntryBase), requireSave = true)?.let { edited ->
-            val editedBaseDirectoryEntry = Yaml.decodeFromString<BaseDirectoryEntry>(edited)
+        val textToEdit = when (format) {
+            OutputFormat.YAML -> Yaml.encodeToString(entry.directoryEntryBase)
+            OutputFormat.JSON -> JsonPretty.encodeToString(entry.directoryEntryBase)
+            else -> throw UsageError("Unsupported edit format: $format")
+        }
+
+        TermUi.editText(textToEdit, requireSave = true)?.let { edited ->
+
+            val editedBaseDirectoryEntry: BaseDirectoryEntry = when (format) {
+                OutputFormat.YAML -> Yaml.decodeFromString(edited)
+                OutputFormat.JSON -> JsonPretty.decodeFromString(edited)
+                else -> throw UsageError("Unsupported edit format: $format")
+            }
+
             val uid = editedBaseDirectoryEntry.dn?.uid ?: throw CliktError("UID ist not specified")
             val jsonData = json.encodeToString(editedBaseDirectoryEntry)
             val updateBaseDirectoryEntry = json.decodeFromString<UpdateBaseDirectoryEntry>(jsonData)
@@ -36,7 +58,13 @@ class EditBaseCommand : CliktCommand(name = "edit-base", help = "Edit base entry
 
             val result = runBlocking { context.client.readDirectoryEntry(mapOf("uid" to uid)) }
 
-            Output.printYaml(result?.first()?.directoryEntryBase)
+            val entryAfterEdit = when (format) {
+                OutputFormat.YAML -> Yaml.encodeToString(result?.first()?.directoryEntryBase)
+                OutputFormat.JSON -> JsonPretty.encodeToString(result?.first()?.directoryEntryBase)
+                else -> throw UsageError("Unsupported edit format: $format")
+            }
+
+            echo(entryAfterEdit)
         }
     }
 }
