@@ -13,11 +13,11 @@ import de.gematik.ti.directory.cli.OcspOptions
 import de.gematik.ti.directory.cli.catching
 import kotlinx.coroutines.runBlocking
 
-class ShowCommand : CliktCommand(name="show", help = "Show all information about an entry"){
+class ShowCommand : CliktCommand(name = "show", help = "Show all information about an entry") {
     private val outputFormat by option().switch(
         "--human" to OutputFormat.HUMAN,
         "--json" to OutputFormat.JSON,
-        "--yaml" to OutputFormat.YAML,
+        "--yaml" to OutputFormat.YAML
     ).default(OutputFormat.HUMAN)
     private val ocspOptions by OcspOptions()
     private val context by requireObject<CommandContext>()
