@@ -5,6 +5,7 @@
 - `vzd-cli admin login` wurde komplett überarbeitet
 - `vzd-cli admin token` ersetzt `vzd-cli admin auth`
 - Neuer Befehl: `vzd-cli admin search`: schnelle, intuitive Suche nach Einträgen
+- Neuer Befehl: `vzd-cli admin show <TELEMATIK_ID>`: zeigt den gesamten Eintrag in verschiedenen Formaten
 - Neuer Befehl: `vzd-cli admin edit-base`: editieren eines Basiseintrags in einem Text-Editor
 - Neuer Ausgabeformat: `--table`, eine ASCII Tabelle
 
